package usantatecla.connect4.views;

public interface ResumeView {

	boolean read();

}
